syntax = "proto3";

package io.evitadb.externalApi.grpc.generated;
option java_multiple_files = true;
option csharp_namespace = "EvitaDB";

enum GrpcCatalogState {
  WARMING_UP = 0;
  ALIVE = 1;
}

enum GrpcQueryPriceMode {
  WITH_TAX = 0;
  WITHOUT_TAX = 1;
}

enum GrpcPriceContentMode {
  FETCH_NONE = 0;
  RESPECTING_FILTER = 1;
  ALL = 2;
}

enum GrpcOrderDirection {
  ASC = 0;
  DESC = 1;
}

enum GrpcOrderBehaviour {
    NULLS_FIRST = 0;
    NULLS_LAST = 1;
}

enum GrpcAttributeSpecialValue {
  NULL = 0;
  NOT_NULL = 1;
}

enum GrpcFacetStatisticsDepth {
  COUNTS = 0;
  IMPACT = 1;
}

enum GrpcEmptyHierarchicalEntityBehaviour {
  LEAVE_EMPTY = 0;
  REMOVE_EMPTY = 1;
}

enum GrpcStatisticsBase {
  COMPLETE_FILTER = 0;
  WITHOUT_USER_FILTER = 1;
}

enum GrpcStatisticsType {
  CHILDREN_COUNT = 0;
  QUERIED_ENTITY_COUNT = 1;
}

enum GrpcPriceInnerRecordHandling {
  NONE = 0;
  FIRST_OCCURRENCE = 1;
  SUM = 2;
  UNKNOWN = 3;
}

enum GrpcSessionType {
  READ_ONLY = 0;
  READ_WRITE = 1;
  BINARY_READ_ONLY = 2;
  BINARY_READ_WRITE = 3;
}

enum GrpcCardinality {
  NOT_SPECIFIED = 0;
  ZERO_OR_ONE = 1;
  EXACTLY_ONE = 2;
  ZERO_OR_MORE = 3;
  ONE_OR_MORE = 4;
}

enum GrpcEvolutionMode {
  ADAPT_PRIMARY_KEY_GENERATION = 0;
  ADDING_ATTRIBUTES = 1;
  ADDING_ASSOCIATED_DATA = 2;
  ADDING_REFERENCES = 3;
  ADDING_PRICES = 4;
  ADDING_LOCALES = 5;
  ADDING_CURRENCIES = 6;
  ADDING_HIERARCHY = 7;
}

enum GrpcCatalogEvolutionMode {
  ADDING_ENTITY_TYPES = 0;
}

enum GrpcEvitaDataType {
  STRING = 0;
  BYTE = 1;
  SHORT = 2;
  INTEGER = 3;
  LONG = 4;
  BOOLEAN = 5;
  CHARACTER = 6;
  BIG_DECIMAL = 7;
  OFFSET_DATE_TIME = 8;
  LOCAL_DATE_TIME = 9;
  LOCAL_DATE = 10;
  LOCAL_TIME = 11;
  DATE_TIME_RANGE = 12;
  BIG_DECIMAL_NUMBER_RANGE = 13;
  LONG_NUMBER_RANGE = 14;
  INTEGER_NUMBER_RANGE = 15;
  SHORT_NUMBER_RANGE = 16;
  BYTE_NUMBER_RANGE = 17;
  LOCALE = 18;
  CURRENCY = 19;

  STRING_ARRAY = 20;
  BYTE_ARRAY = 21;
  SHORT_ARRAY = 22;
  INTEGER_ARRAY = 23;
  LONG_ARRAY = 24;
  BOOLEAN_ARRAY = 25;
  CHARACTER_ARRAY = 26;
  BIG_DECIMAL_ARRAY = 27;
  OFFSET_DATE_TIME_ARRAY = 28;
  LOCAL_DATE_TIME_ARRAY = 29;
  LOCAL_DATE_ARRAY = 30;
  LOCAL_TIME_ARRAY = 31;
  DATE_TIME_RANGE_ARRAY = 32;
  BIG_DECIMAL_NUMBER_RANGE_ARRAY = 33;
  LONG_NUMBER_RANGE_ARRAY = 34;
  INTEGER_NUMBER_RANGE_ARRAY = 35;
  SHORT_NUMBER_RANGE_ARRAY = 36;
  BYTE_NUMBER_RANGE_ARRAY = 37;
  LOCALE_ARRAY = 38;
  CURRENCY_ARRAY = 39;
}

message GrpcEvitaAssociatedDataDataType {
  enum GrpcEvitaDataType {
    STRING = 0;
    BYTE = 1;
    SHORT = 2;
    INTEGER = 3;
    LONG = 4;
    BOOLEAN = 5;
    CHARACTER = 6;
    BIG_DECIMAL = 7;
    OFFSET_DATE_TIME = 8;
    LOCAL_DATE_TIME = 9;
    LOCAL_DATE = 10;
    LOCAL_TIME = 11;
    DATE_TIME_RANGE = 12;
    BIG_DECIMAL_RANGE = 13;
    LONG_RANGE = 14;
    INTEGER_RANGE = 15;
    SHORT_RANGE = 16;
    BYTE_RANGE = 17;
    COMPLEX_DATA_OBJECT = 18;

    STRING_ARRAY = 19;
    BYTE_ARRAY = 20;
    SHORT_ARRAY = 21;
    INTEGER_ARRAY = 22;
    LONG_ARRAY = 23;
    BOOLEAN_ARRAY = 24;
    CHARACTER_ARRAY = 25;
    BIG_DECIMAL_ARRAY = 26;
    OFFSET_DATE_TIME_ARRAY = 27;
    LOCAL_DATE_TIME_ARRAY = 28;
    LOCAL_DATE_ARRAY = 29;
    LOCAL_TIME_ARRAY = 30;
    DATE_TIME_RANGE_ARRAY = 31;
    BIG_DECIMAL_RANGE_ARRAY = 32;
    LONG_RANGE_ARRAY = 33;
    INTEGER_RANGE_ARRAY = 34;
    SHORT_RANGE_ARRAY = 35;
    BYTE_RANGE_ARRAY = 36;
  }
}

enum GrpcQueryPhase {
  OVERALL = 0;
  PLANNING = 1;
  PLANNING_NESTED_QUERY = 2;
  PLANNING_INDEX_USAGE = 3;
  PLANNING_FILTER = 4;
  PLANNING_FILTER_NESTED_QUERY = 5;
  PLANNING_FILTER_ALTERNATIVE = 6;
  PLANNING_SORT = 7;
  PLANNING_SORT_ALTERNATIVE = 8;
  PLANNING_EXTRA_RESULT_FABRICATION = 9;
  PLANNING_EXTRA_RESULT_FABRICATION_ALTERNATIVE = 10;
  EXECUTION = 11;
  EXECUTION_PREFETCH = 12;
  EXECUTION_FILTER = 13;
  EXECUTION_FILTER_NESTED_QUERY = 14;
  EXECUTION_SORT_AND_SLICE = 15;
  EXTRA_RESULTS_FABRICATION = 16;
  EXTRA_RESULT_ITEM_FABRICATION = 17;
  FETCHING = 18;
  FETCHING_REFERENCES = 19;
  FETCHING_PARENTS = 20;
}

enum GrpcEntityExistence {
  MAY_EXIST = 0;
  MUST_NOT_EXIST = 1;
  MUST_EXIST = 2;
}